package entities.catalogo;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class Artista {
  private String nombre;
}
